# mcp-server-nocodb

./: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  COOLIFY_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DOCKER_HUB_DEPLOYMENT.md  Dockerfile  Dockerfile.fastapi  MCP_ARCHITECTURE_COMPARISON.md  MCP_SERVERS_COMPLETE_SETUP.md  MCP_SERVER_TROUBLESHOOTING.md  MCP_STANDARD_TEMPLATE.md  NOCODB_API_SETUP_GUIDE.md  README.md  TASK_MCP_PIPELINE_FIX.md  TEST_MCP_WORKFLOW.md  combined-mcp-config.json  coolify-deployment-guide.md  data-apis-nocodb.json  docker-compose.yaml  docker-compose.yml  env-template.txt  mcp-client-wrapper.js.old  mcp-server-fastapi.py  mcp-server-fastapi.py.old  nocodb-mcp-client.js  nocodb-mcp-config.json  nocodb-mcp-tools.json  nocodb_mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  test-nocodb-token.sh
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
